--- a/src/styles/DetailsItem.css
+++ b/src/styles/DetailsItem.css
@@ -94,7 +94,7 @@
     margin: 10px 0;
 }
 
-.detailsItem .containerRigth .buttons .addCantCart{
+.detailsItem .containerRigth .buttons .AddItemButton{
     width: 48%;
     display: flex;
     justify-content: center;
@@ -104,19 +104,19 @@
     height: 60px;
 }
 
-.detailsItem .containerRigth .buttons .addCantCart span {
+.detailsItem .containerRigth .buttons .AddItemButton span {
     font-weight: 20px;
     margin: 0 10px;
 }
 
-.detailsItem .containerRigth .buttons .addCantCart div {
+.detailsItem .containerRigth .buttons .AddItemButton div {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0px 10px;
 }
 
-.detailsItem .containerRigth .buttons .addCantCart div #quitar, .detailsItem .containerRigth .buttons .addCantCart div #aumentar {
+.detailsItem .containerRigth .buttons .AddItemButton div #quitar, .detailsItem .containerRigth .buttons .AddItemButton div #aumentar {
     background-color: #5b00fb;
     border: none;
     color: white;
